--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
@@ -22,7 +24,7 @@
     "webpack-dev-server": "^2.4.2"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/daveyx/fcc-twitchtv"
+    "type": "git",
+    "url": "https://github.com/daveyx/fcc-twitchtv"
   }
 }
