--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "daveyx",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
